<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     
     <ImageView android:id="@+id/friend_list_image"
         android:src="@drawable/ic_default_friend_image"
         android:layout_height="50dp"
         android:layout_width="50dp"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/friend_image_content_desc"/>
     <TextView android:id="@+id/friend_list_name_text"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/friend_list_image"/>
   
     <ImageView android:id="@+id/friend_name_edit_button"
         android:text="@string/friend_request_decline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/friend_name_edit_content_desc"
         android:clickable="true"
         android:src="@drawable/ic_edit"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>