<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/edit_friend_name_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/edit_friend_name_message"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"/>
    <EditText
        android:id="@+id/edit_friend_name_edittext"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@id/edit_friend_name_message_text"
        android:hint="@string/username" />
    <Button 
        android:id="@+id/edit_friend_name_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_friend_name_ok"
        android:layout_alignParentRight="true"
        android:layout_below="@id/edit_friend_name_edittext"
        android:onClick="setNickname" />
</RelativeLayout>