<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView android:id="@+id/friend_request_image"
         android:src="@drawable/ic_default_friend_image"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/friend_image_content_desc"/>
     <TextView android:id="@+id/friend_request_name_text"
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/friend_request_image"/>
     <Button android:id="@+id/friend_request_accept_button"
         android:text="@string/friend_request_accept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="?android:attr/buttonStyleSmall"
         android:layout_toLeftOf="@+id/friend_request_decline_button"/>
     <Button android:id="@id/friend_request_decline_button"
         android:text="@string/friend_request_decline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="?android:attr/buttonStyleSmall"
         android:layout_alignParentRight="true"/>
 </RelativeLayout>